--- a/launch-countdown-timer-main/styles/style.css
+++ b/launch-countdown-timer-main/styles/style.css
@@ -1,22 +1,130 @@
-/* config */
-/*========================================================*/
-html, * {
+html {
   box-sizing: border-box;
+}
+
+* {
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
 }
 
-/* global */
-/*========================================================*/
+a {
+  text-decoration: none;
+}
+
+:root {
+  --card-fs: 2.7vw;
+  --wrapper-mw: 95% ;
+}
+
+@media (min-width: 720px) {
+  :root {
+    --wrapper-mw: 90% ;
+  }
+}
+@media (min-width: 900px) {
+  :root {
+    --card-fs: 22px;
+  }
+}
+.flex-cc {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.basic-box, main .countdown .card-group .description {
+  width: auto;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+
 body {
   font-family: "Red Hat Text", sans-serif;
   font-size: 14px;
+  text-align: center;
+  color: #8486a9;
 }
 
-.site-wrapper {
-  width: 100vw;
+.bg-site {
   height: 100vh;
-  background: linear-gradient(to bottom, #191a24, #343650);
+  min-height: 375px;
+  background-image: url(../images/pattern-hills.svg), url(../images/bg-stars.svg), linear-gradient(to bottom, #282334, #211929);
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+.content-wrapper {
+  width: 95%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0;
+  display: block;
+  max-width: 900px;
+}
+
+main {
+  width: 100%;
+  height: 90%;
+  margin: 0;
+  padding: 0;
+  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  /* countdown */
+}
+main header {
+  flex-basis: 20%;
+  min-height: none;
+}
+main header h1 {
+  margin-top: auto;
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.4em;
+  letter-spacing: 8px;
+}
+main .countdown {
+  width: auto;
+  height: auto;
+  margin: 0 0 20%;
+  padding: 0;
+  display: block;
+  min-height: calc($card-w - 18px);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+main .countdown .card-group .card {
+  width: 21vw;
+  height: 21vw;
+  margin: 0;
+  padding: 0;
+  display: block;
+  max-height: 190px;
+  max-width: 190px;
+  background: #191a24;
+}
+main .countdown .card-group .description {
+  margin-top: 5%;
+  font-size: var(--card-fs);
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+footer.social-icons .icon {
+  width: auto;
+  height: auto;
+  margin: 1rem;
+  padding: 0;
+  display: inline-block;
 }
 
 /*# sourceMappingURL=style.css.map */
