estilos base terminados

--- a/launch-countdown-timer-main/styles/main.scss
+++ b/launch-countdown-timer-main/styles/main.scss
@@ -10,15 +10,12 @@ body {
     color: $priGrayishBlue
 }
 
-
-
-
-
 .bg-site { 
     //@include box-whmpd(100vw, 100vh);
     //min-width: $content-mw;
     height: 100vh;
-    min-height: 375px;
+    min-height: 300px;
+    min-width: 300px;
 
     background-image: $img-pattern, $img-stars, $bg-gradient;
     background-repeat: no-repeat;
@@ -31,27 +28,28 @@ body {
 }
 
 main {
-    @include box-whmpd(100%,90%);
-    @include simple-flex-dja(column, center, stretch);
+    @include box-whmpd(100%, 90%);
+    @include flex-dja(column, center, stretch);
+    max-height: calc(100% - #{$footer-mh});
 
     header {
         flex-basis: 20%;
         min-height: none;
 
         h1 {
-            margin-top: auto;
             color:white;
             text-transform: uppercase;
             font-size: 1.4em;
             letter-spacing: 8px;
+            margin-bottom: 10px;
         }
     }
     
     /* countdown */
     .countdown {
-        @include box-whmpd($m: 0 0 20%);
-        min-height: calc($card-w - 18px);
-        @include simple-flex-dja($j: space-around,$a: flex-start);
+        @include box-whmpd($m: 0 0 10px);
+        flex-basis: max(45%);
+        @include flex-dja($j: space-around,$a: flex-start);
         
 
         .card-group{
@@ -61,16 +59,17 @@ main {
                 max-height: $card-MH;
                 max-width: $card-MW;
                 background: $neuVeryDarkMostlyBlue;
+                border-radius: 10px;
             }
             
             
             .description {
                 @extend .basic-box;
-                margin-top: 5%;
+                margin-top: 7%;
                 font-size: $card-fs;
                 font-weight: 700;
                 text-transform: uppercase;
-                letter-spacing: 3px;
+                letter-spacing: .5vw;
             }
 
         }
@@ -83,7 +82,7 @@ main {
 // social links, footer
 footer.social-icons {
     .icon {
-        @include box-whmpd($m: 1rem, $d: inline-block);
+        @include box-whmpd($p: 0 1rem, $d: inline-block);
     }
 }
 
