--- a/launch-countdown-timer-main/styles/style.css
+++ b/launch-countdown-timer-main/styles/style.css
@@ -13,18 +13,24 @@ a {
 }
 
 :root {
-  --card-fs: 2.7vw;
+  --card-fs: 2.6vw;
   --wrapper-mw: 95% ;
 }
 
-@media (min-width: 720px) {
+@media (min-width: 340px) {
   :root {
-    --wrapper-mw: 90% ;
+    --card-fs: 2.8vw;
   }
 }
-@media (min-width: 900px) {
+@media (min-width: 500px) {
   :root {
-    --card-fs: 22px;
+    --card-fs: 14px;
+  }
+}
+@media (min-width: 720px) {
+  :root {
+    --wrapper-mw: 90%
+    --card-fs: 16px;
   }
 }
 .flex-cc {
@@ -51,7 +57,8 @@ body {
 
 .bg-site {
   height: 100vh;
-  min-height: 375px;
+  min-height: 300px;
+  min-width: 300px;
   background-image: url(../images/pattern-hills.svg), url(../images/bg-stars.svg), linear-gradient(to bottom, #282334, #211929);
   background-repeat: no-repeat;
   background-position: bottom;
@@ -76,6 +83,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
+  max-height: calc(100% - 35px);
   /* countdown */
 }
 main header {
@@ -83,19 +91,19 @@ main header {
   min-height: none;
 }
 main header h1 {
-  margin-top: auto;
   color: white;
   text-transform: uppercase;
   font-size: 1.4em;
   letter-spacing: 8px;
+  margin-bottom: 10px;
 }
 main .countdown {
   width: auto;
   height: auto;
-  margin: 0 0 20%;
+  margin: 0 0 10px;
   padding: 0;
   display: block;
-  min-height: calc($card-w - 18px);
+  flex-basis: max(45%);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -110,20 +118,21 @@ main .countdown .card-group .card {
   max-height: 190px;
   max-width: 190px;
   background: #191a24;
+  border-radius: 10px;
 }
 main .countdown .card-group .description {
-  margin-top: 5%;
+  margin-top: 7%;
   font-size: var(--card-fs);
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 0.5vw;
 }
 
 footer.social-icons .icon {
   width: auto;
   height: auto;
-  margin: 1rem;
-  padding: 0;
+  margin: 0;
+  padding: 0 1rem;
   display: inline-block;
 }
 
