--- a/launch-countdown-timer-main/styles/style.css
+++ b/launch-countdown-timer-main/styles/style.css
@@ -13,24 +13,30 @@ a {
 }
 
 :root {
-  --card-fs: 2.6vw;
+  --card-des-fs: 2.6vw;
+  --card-fs: 10.8vw;
   --wrapper-mw: 95% ;
 }
 
 @media (min-width: 340px) {
   :root {
-    --card-fs: 2.8vw;
+    --card--des-fs: 2.8vw;
   }
 }
 @media (min-width: 500px) {
   :root {
-    --card-fs: 14px;
+    --card-des-fs: 14px;
   }
 }
 @media (min-width: 720px) {
   :root {
     --wrapper-mw: 90%
-    --card-fs: 16px;
+    --card--des-fs: 16px;
+  }
+}
+@media (min-width: 800px) {
+  :root {
+    --card-fs: 88px;
   }
 }
 .flex-cc {
@@ -60,8 +66,13 @@ body {
   min-height: 300px;
   min-width: 300px;
   background-image: url(../images/pattern-hills.svg), url(../images/bg-stars.svg), linear-gradient(to bottom, #191a24, #241d35 40%);
-  background-repeat: no-repeat;
-  background-position: bottom;
+  background-repeat: repeat-x;
+  background-position: left bottom;
+}
+@keyframes bg-space {
+  100% {
+    background-position: -1440px bottom;
+  }
 }
 
 .content-wrapper {
@@ -103,7 +114,7 @@ main .countdown {
   margin: 0 0 10px;
   padding: 0;
   display: block;
-  flex-basis: max(50%);
+  flex-basis: max(60%);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -118,33 +129,31 @@ main .countdown .card-group .card {
   max-height: 160px;
   max-width: 160px;
   background: #191a24;
-  border-radius: 7%;
+  border-radius: 10%;
+  position: relative;
+  perspective: 1500px;
+}
+main .countdown .card-group .card div {
+  font-size: var(--card-fs);
+  font-weight: 700;
+  color: #fb6087;
+  padding-top: 10%;
+  width: 100%;
+  height: 92%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #343650;
+  border: 1px solid #343650;
+  border-radius: 6%;
+  backface-visibility: hidden;
 }
 main .countdown .card-group .description {
   margin-top: 12%;
-  font-size: var(--card-fs);
+  font-size: var(--card-des-fs);
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.5vw;
-}
-
-.card div::before,
-.card div::after {
-  content: "";
-  width: 10%;
-  height: 10%;
-  position: absolute;
-  top: 45%;
-  background-color: #191a24;
-  border-radius: 50%;
-}
-
-.card div::before {
-  left: -5.5%;
-}
-
-.card div::after {
-  right: -5.5%;
 }
 
 footer.social-icons .icon {
