detalles finales, icono de info, atribución

--- a/launch-countdown-timer-main/styles/style.css
+++ b/launch-countdown-timer-main/styles/style.css
@@ -67,7 +67,6 @@ body {
   height: 100vh;
   min-height: 300px;
   min-width: 300px;
-  background-image: url(../images/bg-stars.svg);
   position: relative;
   background-color: #231b2d;
   animation: bg-sky 15s ease infinite alternate;
@@ -223,6 +222,65 @@ footer.social-icons .icon {
   margin: 0;
   padding: 0 1rem;
   display: inline-block;
+}
+
+.attribution {
+  font-size: 10px;
+  text-align: left;
+  max-width: 22px;
+  max-height: 22px;
+  padding: 4px 8px;
+  position: fixed;
+  top: 8px;
+  left: 8px;
+  overflow: hidden;
+  background: #e7e7e9;
+  border-radius: 30px;
+  box-shadow: 0px 2px 6px #0000008c;
+  transition-property: max-width;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
+}
+
+.attribution p {
+  position: relative;
+  top: 0;
+  right: 0;
+  width: 308px;
+}
+
+.attribution::after {
+  content: "i";
+  font-family: serif;
+  font-size: 26px;
+  font-weight: 700;
+  text-align: center;
+  line-height: normal;
+  color: #2e2338;
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #e7e7e9;
+  border-radius: 50%;
+  transition-property: transform, opacity, background-color;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
+}
+
+.attribution a {
+  color: #3e52a3;
+}
+
+.attribution:hover {
+  max-width: 308px;
+}
+
+.attribution:hover::after {
+  transform: scale(0) rotate(90deg);
+  opacity: 0;
+  background-color: #3e52a3;
 }
 
 /*# sourceMappingURL=style.css.map */
